Fixed Filter Bar Wrapping Issues

--- a/css/components/DatabaseBrowser.css
+++ b/css/components/DatabaseBrowser.css
@@ -71,9 +71,7 @@
 }
 
 .databaseBrowser .filters {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5pt;
+    display: contents;
 }
 
 .databaseBrowser .filters:empty {
